plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
}

bootJar.enabled=false

subprojects {
	group = 'com.flab'
	version = '0.0.1-SNAPSHOT'

	apply plugin: 'java'
	apply plugin: 'org.springframework.boot'

	// jdk version 설정
	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(17)
		}
	}

	// 라이브러리 저장소
	repositories {
		// https://repo.maven.apache.org/maven2/ 에서 라이브러리를 다운 받음.
		mavenCentral()
	}

    dependencies {
		// Spring Boot BOM 으로 의존성 관리 => 하위 모듈에서도 아래 설정 그대로 적용 시킴.
		implementation platform('org.springframework.boot:spring-boot-dependencies:3.4.4')

		// compile 시점에서만 lombok을 쓰겠다.
        compileOnly 'org.projectlombok:lombok:1.18.24'
		// 컴파일 시 애노테이션 처리에 사용 @getter, @setter
        annotationProcessor 'org.projectlombok:lombok:1.18.24'

		// 테스트 런타임 설정
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
    }
}